--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
       <!-- controls: 컨트롤러 출력, loop: 반복, autoplay: 자동재생, muted: 음소거 -->
-      <audio src="spring.mp3" controls loop autoplay muted></audio>
-      <video src="salad.mp4" poster="salad.jpg" controls loop muted autoplay width="50%"></video>
+      <audio src="spring.mp3" controls loop autoplay></audio>
+      <video src="salad.mp4" poster="salad.jpg" controls loop autoplay width="50%"></video>
    </body>
 </html>
